# RoboOp

./: README.md  pyproject.toml  testrunner.sh
docs/: cookbook.md
robo/: __init__.py  exceptions.py  models.py  streamwrappers.py
robo/models/: __init__.py  _models.json  cache.py  get_latest.py
robo/testing/: __init__.py  fakeanthropic.py  testbots.py
robo/testing/unittests/: __init__.py
robo/tools/: __init__.py
robo/unittests/: __init__.py  newtype.py
robo/utils/: checkapi.py  interlocute.py
